force-app/main/default/objects/ACNW_Permission__c/ACNW_Permission__c.object-meta.xml
<CustomObject>
    <label>Permission</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Permission Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>