force-app/main/default/objects/ACNW_Permission__c/fields/Approval_relavent__c.field-meta.xml
<CustomField>
    <fullName>Approval_relavent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can be used as a criteria in approval flow</description>
    <inlineHelpText>Can be used as a criteria in approval flow</inlineHelpText>
    <label>Requires Approval</label>
    <type>Checkbox</type>
</CustomField>