force-app/main/default/objects/ACNW_Permission__c/fields/License_Required__c.field-meta.xml
<CustomField>
    <fullName>License_Required__c</fullName>
    <label>License Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Chatter Only User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>