force-app/main/default/objects/ACNW_Permission__c/fields/Permission_Count__c.field-meta.xml
<CustomField>
    <fullName>Permission_Count__c</fullName>
    <description>Permission count from user permission</description>
    <inlineHelpText>Permission count</inlineHelpText>
    <label>Permission Count</label>
    <summarizedField>ACNW_User_Permission__c.Permission_Count__c</summarizedField>
    <summaryForeignKey>ACNW_User_Permission__c.Permission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>