force-app/main/default/objects/ACNW_Permission__c/fields/SF_Permission_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Permission_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SF Permission Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>