force-app/main/default/objects/ACNW_Permission__c/validationRules/License_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>License_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>isblank(License_Required__c) &amp;&amp;  !ISPICKVAL(Type__c, &apos;Role&apos;)</errorConditionFormula>
    <errorMessage>License is required.</errorMessage>
</ValidationRule>