force-app/main/default/objects/ACNW_Permission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Type__c</columns>
    <columns>License_Required__c</columns>
    <columns>Permission_Count__c</columns>
    <columns>SF_Permission_Id__c</columns>
    <columns>Approval_relavent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>