force-app/main/default/objects/ACNW_Permission__c/listViews/Permission_Sets.listView-meta.xml
<ListView>
    <fullName>Permission_Sets</fullName>
    <columns>NAME</columns>
    <columns>License_Required__c</columns>
    <columns>Name__c</columns>
    <columns>Type__c</columns>
    <columns>Approval_relavent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Permission Set</value>
    </filters>
    <label>Permission Sets</label>
</ListView>