force-app/main/default/objects/ACNW_Permission__c/listViews/Platform_Permissions.listView-meta.xml
<ListView>
    <fullName>Platform_Permissions</fullName>
    <columns>NAME</columns>
    <columns>License_Required__c</columns>
    <columns>Permission_Count__c</columns>
    <columns>SF_Permission_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>License_Required__c</field>
        <operation>includes</operation>
        <value>Salesforce Platform</value>
    </filters>
    <label>Platform Permissions</label>
</ListView>