force-app/main/default/objects/ACNW_Permission__c/listViews/Role_Permissions.listView-meta.xml
<ListView>
    <fullName>Role_Permissions</fullName>
    <columns>NAME</columns>
    <columns>License_Required__c</columns>
    <columns>Name__c</columns>
    <columns>Type__c</columns>
    <columns>Approval_relavent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Role</value>
    </filters>
    <label>Role Permissions</label>
    <language>en_US</language>
</ListView>