force-app/main/default/objects/ACNW_Permission__c/listViews/Unused_Permissions.listView-meta.xml
<ListView>
    <fullName>Unused_Permissions</fullName>
    <columns>NAME</columns>
    <columns>License_Required__c</columns>
    <columns>Permission_Count__c</columns>
    <columns>SF_Permission_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Count__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unused Permissions</label>
</ListView>